Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8298

enabling gss causes possibly misleading warnings from tgt_init_sec_level()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • None
    • 3
    • 9223372036854775807

      When connecting to a GSS-ized target we see the following warnings on the console

      [80648.003579] Lustre: 1666:0:(tgt_handler.c:894:tgt_init_sec_level()) client 192.168.122.162@tcp -> target lustre-MDT0000 uses old version, run under security level 0.
      

      These are likely misleading/unhelpful to the admin.

            yong.fan nasf (Inactive)
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: