lustre/include/lu_target.h
@@ -131,7 +131,6 @@ struct lu_target {
 	rwlock_t		 lut_sptlrpc_lock;
 	struct sptlrpc_rule_set	 lut_sptlrpc_rset;
 	spinlock_t		 lut_flags_lock;
-	int			 lut_sec_level;
 	unsigned int		 lut_syncjournal:1,
 				 lut_sync_lock_cancel:2,
 				 /* e.g. OST node */
